# streak

./: CMakeLists.txt  README.md
glad/: CMakeLists.txt
glad/include/glad/: gl.h
glad/src/: gl.c
sandbox/: CMakeLists.txt
sandbox/src/: main.cpp
streak/: CMakeLists.txt
streak/include/core/: application.h  counting_semaphore.h  platform.h  window.h
streak/include/events/: event.h  event_dispatcher.h  event_queue.h  window_event.h
streak/include/graphics/: geometry.h  graphics_context.h  pipeline.h  renderer.h  vertex_buffer.h
streak/include/mt_sync/: semaphore.h
streak/include/platform/linux/: linux_semaphore.h  wayland_window.h
streak/include/platform/linux/opengl/: opengl_wayland_context.h
streak/include/platform/opengl/: opengl_renderer.h  vertex_buffer.h
streak/src/: entry_point.cpp
streak/src/core/: entry_point.cpp  platform.cpp  window.cpp
streak/src/graphics/: geometry.cpp  graphics_context.cpp  pipeline.cpp  renderer.cpp
streak/src/mt_sync/: semaphore.cpp
streak/src/platform/linux/: linux_semaphore.cpp  wayland_window.cpp
streak/src/platform/linux/opengl/: opengl_wayland_context.cpp
streak/src/platform/opengl/: opengl_renderer.cpp
toolchains/: clang_toolchain.cmake
